--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="browsermode" content="application"> -->
     <meta name="msapplication-tap-highlight" content="no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title></title>
   </head>
   <body>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="text/javascript" charset="utf-8"></script>
