--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <title></title>
   </head>
   <body>
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="text/javascript" charset="utf-8"></script>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
